cluster/core/nginx-gateway-fabric/gateways.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-internal
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  infrastructure:
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: internal-proxy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.k3s.i.${DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: longhorn-https
      protocol: HTTPS
      port: 443
      hostname: longhorn.k3s.i.${DOMAIN}
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: longhorn-internal-cert
      allowedRoutes:
        namespaces:
          from: All
    - name: influxdb2-https
      protocol: HTTPS
      port: 443
      hostname: influxdb2.k3s.i.${DOMAIN}
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: influxdb2-internal-cert
      allowedRoutes:
        namespaces:
          from: All
    - name: loki-https
      protocol: HTTPS
      port: 443
      hostname: loki.k3s.i.${DOMAIN}
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: loki-internal-cert
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-external
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  infrastructure:
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: external-proxy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-stabl-one-cert
      allowedRoutes:
        namespaces:
          from: All
